reworked css